<resources>
    <string name="app_name">IRecipe</string>

    <!-- 회원가입 -->
    <string name="sign_title">회원가입</string>
    <string name="sign_name">이름</string>
    <string name="sign_name_hint">성명</string>
    <string name="sign_gender">성별</string>
    <string name="sign_man">남자</string>
    <string name="sign_woman">여자</string>
    <string name="sign_age">나이</string>
    <string name="sign_choice">선택</string>
    <string name="sign_next">다음</string>
    <string name="sign_previous">이전</string>
    <string name="sign_image">프로필 사진</string>
    <string name="sign_nick">닉네임</string>
    <string name="sign_nick_hint">1~5자/영어 대소문자, 한글, 숫자 조합가능</string>
    <string name="sign_check">중복확인</string>
    <string name="sign_allergy">알레르기(선택)</string>
    <string name="sign_search">검색하기</string>
    <string name="sign_complete">회원가입 완료</string>
    <string name="sign_nick_complete">사용가능한 닉네임입니다.</string>
    <string name="sign_nick_overlap">이미 존재하는 닉네임입니다.</string>

    <!-- 알레르기 목록 -->
    <string name="allergy_title">알레르기 선택</string>
    <string name="allergy_nan">난류</string>
    <string name="allergy_milk">우유</string>
    <string name="allergy_peanut">땅콩</string>
    <string name="allergy_nuts">견과류</string>
    <string name="allergy_flour">밀</string>
    <string name="allergy_sesame">참깨</string>
    <string name="allergy_bean">콩(대두)</string>
    <string name="allergy_fruit">과일 및 채소</string>
    <string name="allergy_sea">해산물 및 조개류</string>

    <!-- 연령대 -->
    <string name="age_10">10대</string>
    <string name="age_20">20대</string>
    <string name="age_30">30대</string>
    <string name="age_40">40대</string>
    <string name="age_50">50대</string>
    <string name="age_60">60대</string>

    <!-- 프로필 사진 Dialog -->
    <string name="profile_pickAlbum">앨범에 사진 선택</string>
    <string name="profile_base">기본이미지로 변경</string>
    <string name="profile_cancel">취소</string>
    <string name="profile_title">프로필사진 설정</string>

    <!-- 로그인 화면 -->
    <string name="login_kakao">카카오로 시작하기</string>
    <string name="login_naver">네이버로 시작하기</string>

    <!-- Bottom Bar Title -->
    <string name="bottom_home">홈</string>
    <string name="bottom_chat">AI 레시피</string>
    <string name="bottom_refrigerator">나의 냉장고</string>
    <string name="bottom_community">커뮤니티</string>
    <string name="bottom_my_page">마이페이지</string>

    <!-- 냉장고 UI -->
    <string name="ref_hint">오늘은 이 재료로 음식해보는거 어때요?</string>
    <string name="ref_alarm">두부의 유통기한이 1일 남았어요</string>
    <string name="ref_title">실온 보관</string>
    <string name="ref_food_signUp">음식 추가</string>
    <string name="ref_add_name">제품명</string>
    <string name="ref_hint_add_name">제품명을 입력해주세요</string>
    <string name="ref_add_expiration">유통 기한</string>
    <string name="ref_hint_add_expiration">날짜 선택</string>
    <string name="ref_add_category">음식종류</string>
    <string name="ref_hint_add_category">음식종류 선택</string>
    <string name="ref_add_type">보관 방법</string>
    <string name="ref_hint_add_type">보관방법 선택</string>
    <string name="ref_add_memo">메모</string>
    <string name="ref_hint_add_memo">최대 20자 작성가능</string>
    <string name="ref_add_complete">음식 저장</string>
    <string name="ref_empty">앗! 등록된 음식이 없어요</string>

    <!--음식 종류-->
    <string name="food_category_meet">육류</string>
    <string name="food_category_vegetable">채소류</string>
    <string name="food_category_fruit">과일</string>
    <string name="food_category_fish">어패류</string>
    <string name="food_category_crustacean">갑각류</string>
    <string name="food_category_drink">음료</string>
    <string name="food_category_dairy">유제품</string>
    <string name="food_category_sauce">소스</string>
    <string name="food_category_processed">가공식품</string>

    <!--음식 보관-->
    <string name="food_type_normal">실온 보관</string>
    <string name="food_type_cold">냉장 보관</string>
    <string name="food_type_frozen">냉동 보관</string>

    <!--검색-->
    <string name="community_type_title">제목</string>
    <string name="community_type_content">내용</string>
    <string name="community_type_writer">작성자</string>

    <!-- 커뮤니티 UI -->
    <string name="com_hint">오늘의 레시피를 검색해 보세요</string>
    <string name="com_level">난이도</string>
    <string name="com_foodType">요리 종류</string>
    <string name="com_foodType2">카테고리</string>
    <string name="com_makePost">글쓰기</string>
    <string name="com_name">글쓴이</string>
    <string name="com_time">1일 전</string>
    <string name="com_title">제목</string>
    <string name="com_subtitle">소제목</string>
    <string name="com_count">0</string>
    <string name="com_cntLimit">0/20</string>
    <string name="com_cntLimit2">0/50</string>
    <string name="com_postHint">내용을 입력하세요</string>
    <string name="com_saveDraft">임시 저장</string>
    <string name="com_save">저장</string>
    <string name="com_font">A</string>
    <string name="com_follow">팔로우</string>
    <string name="com_text">본문</string>
    <string name="com_addImg">이미지 업로드</string>
    <string name="com_sort_basic">기본순</string>
    <string name="com_sort_like">인기순</string>
    <string name="com_sort_score">평점 높은 순</string>
    <string name="com_star_total">5.0</string>
    <string name="com_star_raning">5</string>
    <string name="com_ranking_title">비빔밥</string>
    <string name="com_write_review">후기 작성</string>
    <string name="com_write_QA">Q&amp;A 작성</string>

    <!-- modal UI -->
    <string name="modal_korean">한식</string>
    <string name="modal_chinese">중식</string>
    <string name="modal_japanese">일식</string>
    <string name="modal_western">양식</string>
    <string name="modal_unusual">이색음식</string>
    <string name="modal_simple">간편요리</string>
    <string name="modal_high">고급요리</string>
    <string name="level_high">상</string>
    <string name="level_middle">중</string>
    <string name="level_low">하</string>
    <string name="modal_complete">선택 완료</string>
    <string name="modal_delete">삭제</string>
    <string name="modal_cancle">돌아가기</string>
    <string name="modal_delete1">해당 게시글을 삭제 하시겠습니까?</string>
    <string name="modal_delete2">게시글이 영구적으로 삭제됩니다.</string>
    <string name="modal_modify">수정</string>

    <!--  home  -->
    <string name="home_title_ranking">이달의 레시피 랭킹</string>
    <string name="home_title_ref">나의 냉장고 유통기한 임박 재료</string>
    <string name="home_empty_recipe">앗! 등록된 레시피가 없어요</string>

    <string name="home_detail_all">전체</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Title -->
    <string name="title_home">아이레시피</string>
    <string name="title_ref">나의 냉장고</string>
    <string name="title_chat">AI 레시피</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_community_write">커뮤니티 글쓰기</string>
    <string name="title_mypage">마이페이지</string>
    <string name="title_mypage_recipe">레시피 보관함</string>
    <string name="title_mypage_alarm">알람설정</string>
    <string name="title_mypage_info">개인정보</string>
    <string name="title_mypage_cs">고객센터</string>

    <!-- Comment -->
    <string name="comment_title_review">후기</string>
    <string name="comment_title_QA">Q&amp;A</string>
    <string name="qa_writer">(작성자)</string>

    <!-- Common -->
    <string name="common_ok">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_modify">수정하기</string>
    <string name="common_modify_confirm">수정완료</string>
    <string name="common_temp_title">제목</string>
    <string name="common_content_complete">작성 완료</string>
    <string name="common_delete">삭제</string>

    <!-- Error Message -->
    <string name="error_server_refrigerator">[Error: %d] 냉장고를 불러오는데 실패했습니다.</string>
    <string name="error_refrigerator">[Error: %s] 냉장고를 불러오는데 실패했습니다.</string>
    <string name="error_add_ingredient">[Error: %d] 음식을 저장하는데 실패했습니다.</string>
    <string name="error_write_post">[Error: %d] 게시글 요청이 실패했습니다.</string>
    <string name="error_server_fetch_post">[Error: %d] 게시글을 불러올 수 없습니다.</string>
    <string name="error_fetch_post">[Error: %s] 게시글을 불러올 수 없습니다.</string>
    <string name="error_server_review">[Error: %d] 후기 요청이 실패했습니다.</string>
    <string name="error_server_qa">[Error: %d] 질문 요청이 실패했습니다.</string>
    <string name="error_review">[Error: %s] 후기 요청이 실패했습니다.</string>
    <string name="error_server_fetch_review">[Error: %d] 리뷰를 불러오는데 실패했습니다.</string>
    <string name="error_fetch_review">[Error: %s] 리뷰를 불러오는데 실패했습니다.</string>
    <string name="error_server_delete">[Error: %d] 회원탈퇴 요청이 실패했습니다.</string>
    <string name="error_delete">[Error: %s] 회원탈퇴 요청이 실패했습니다.</string>
    <string name="error_server_expiration_ingredient">[Error] 음식을 불러오는데 실패했습니다.</string>

    <!-- Confirm Message -->
    <string name="confirm_add_ingredient">음식을 등록했어요!</string>
    <string name="confirm_add_review">후기를 등록했어요!</string>
    <string name="confirm_set_like">관심 게시글에 등록했어요!</string>
    <string name="expiration_days_left">%s일 남음</string>
    <string name="confirm_add_qa">질문을 등록했어요!</string>
</resources>