<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog_allergy"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allergy_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/color_main"
        android:layout_marginStart="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_allergy_choice"/>
    <LinearLayout
        android:id="@+id/ll_allergy_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">
            류<CheckBox
                android:id="@+id/cb_nan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergy_nan"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/cb_milk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergy_milk"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/cb_peanut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergy_peanut"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/cb_nuts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergy_nuts"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/cb_flour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergy_flour"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/cb_sesame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergy_sesame"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/cb_bean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergy_bean"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/cb_fruit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergy_fruit"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/cb_sea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allergy_sea"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_allergy_choice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/common_cancel"
            android:textSize="16sp"
            android:textColor="@color/red_1"/>
        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_ok"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>