<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ll_add"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_complete">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ref_add_name"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_outline"
            android:hint="@string/ref_hint_add_name"
            android:textSize="14sp"
            android:paddingVertical="12dp"
            android:paddingHorizontal="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ref_add_expiration"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_expiration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_outline"
            android:hint="@string/ref_hint_add_expiration"
            android:textSize="14sp"
            android:paddingVertical="12dp"
            android:paddingHorizontal="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ref_add_type"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_outline"
            android:hint="@string/ref_hint_add_type"
            android:textSize="14sp"
            android:paddingVertical="12dp"
            android:paddingHorizontal="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ref_add_save"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_save_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_outline"
            android:hint="@string/ref_hint_add_save"
            android:textSize="14sp"
            android:paddingVertical="12dp"
            android:paddingHorizontal="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ref_add_memo"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_outline"
            android:hint="@string/ref_hint_add_memo"
            android:textSize="14sp"
            android:paddingVertical="12dp"
            android:paddingHorizontal="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_rounded_lightgray"
        android:text="@string/ref_add_complete"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:enabled="false"
        android:layout_marginHorizontal="14dp"
        android:layout_marginBottom="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/ll_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>