<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.detail.HomeDetailFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_all"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/home_detail_all"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_korean"
        android:textSize="13sp"
        android:layout_marginTop="17dp"
        android:layout_marginStart="70dp"
        android:textColor="@color/btn_community_post_select_color"
        android:background="@drawable/btn_community_post_select"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_korean"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/modal_korean"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_all"
        app:layout_constraintEnd_toStartOf="@id/btn_chinese"
        android:textSize="13sp"
        android:layout_marginTop="17dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/btn_community_post_select_color"
        android:background="@drawable/btn_community_post_select"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_chinese"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/modal_chinese"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_korean"
        app:layout_constraintEnd_toStartOf="@id/btn_japanese"
        android:textSize="13sp"
        android:layout_marginTop="17dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/btn_community_post_select_color"
        android:background="@drawable/btn_community_post_select"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_japanese"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/modal_japanese"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_chinese"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="13sp"
        android:layout_marginTop="17dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="70dp"
        android:textColor="@color/btn_community_post_select_color"
        android:background="@drawable/btn_community_post_select"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_western"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/modal_western"
        app:layout_constraintTop_toBottomOf="@id/btn_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_unusual"
        android:textSize="13sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="40dp"
        android:textColor="@color/btn_community_post_select_color"
        android:background="@drawable/btn_community_post_select"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_unusual"
        android:layout_width="66dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/modal_unusual"
        app:layout_constraintTop_toBottomOf="@id/btn_korean"
        app:layout_constraintStart_toEndOf="@id/btn_western"
        app:layout_constraintEnd_toStartOf="@id/btn_simple"
        android:textSize="13sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/btn_community_post_select_color"
        android:background="@drawable/btn_community_post_select"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simple"
        android:layout_width="66dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/modal_simple"
        app:layout_constraintTop_toBottomOf="@id/btn_korean"
        app:layout_constraintStart_toEndOf="@id/btn_unusual"
        app:layout_constraintEnd_toStartOf="@id/btn_high"
        android:textSize="13sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/btn_community_post_select_color"
        android:background="@drawable/btn_community_post_select"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_high"
        android:layout_width="66dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="@string/modal_high"
        app:layout_constraintTop_toBottomOf="@id/btn_korean"
        app:layout_constraintStart_toEndOf="@id/btn_simple"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="13sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/btn_community_post_select_color"
        android:background="@drawable/btn_community_post_select"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_high"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="25dp" />




</androidx.constraintlayout.widget.ConstraintLayout>